--- a/form-task.html
+++ b/form-task.html
@@ -27,6 +27,7 @@
                 <input type="text" name="lastname" placeholder="نام خانوادگی" required /><br/>
                 <input type="email" name="email" placeholder="آدرس ایمیل" required /><br/>
                 <input type="password" name="pass" autocomplete="off" required placeholder="کلمه عبور" />
+                <p class="alt-message"></p><br/>
                 <button type="submit">ثبت نام</button>
             </form>
         </div>
@@ -35,6 +36,7 @@
                 <h2>ورود</h2>
                 <input type="email" name="email" placeholder="آدرس ایمیل" required/><br/>
                 <input type="password" name="pass" autocomplete="off" required placeholder="کلمه عبور" />
+                <p class="alt-message"></p><br/>
                 <button type="submit">ورود</button>
             </form>
         </div>
